src/test/ui/const-generics/min_const_generics/default_function_param.stderr
error: defaults for const parameters are only allowed in `struct`, `enum`, `type`, or `trait` definitions
  --> $DIR/default_function_param.rs:3:14
   |
LL | fn foo<const SIZE: usize = 5usize>() {}
   |              ^^^^

error: aborting due to previous error

