src/test/ui/const-generics/min_const_generics/default_function_param.rs
#![crate_type = "lib"]

fn foo<const SIZE: usize = 5usize>() {}
//~^ ERROR defaults for const parameters are
